# EdCation

./: .gitignore  README.md  package-lock.json  package.json
certificado-nft/: Cargo.toml
certificado-nft/src/: lib.rs  main.rs
client/src/: index.css  index.html
client/src/components/: App.js  Assinatura.js  Conta-Empresa.js  Conta.js  Criar-Conta-Empresa.js  Criar-Conta.js  Escolha.js  Home-Empresa.js  Home.js  Iteracao.js  Login.js  LoginEmpresa.js  PreStart.js  Quiz.js  Recompensa.js  Teorico.js
docs/: docs.md
scroll/: Arte.sol  Ingresso.sol  Musica.sol
token-smd/: Cargo.toml
token-smd/src/: lib.rs
