[package]
name = "simulador_token"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus", "erc20"]
description = "Token ERC-20 para Arbitrum Stylus"

[dependencies]
stylus-sdk = "0.8.0"  # SDK do Stylus
alloy-primitives = "0.8.20"  # Manipulação de tipos Ethereum
alloy-sol-types = "0.8.20"  # Para suportar Solidity types no Rust

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["cdylib"]  # Contrato compilado como WebAssembly

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"  # Otimizado para tamanho mínimo